--- a/src/card_interactions/templates/create_resource.html
+++ b/src/card_interactions/templates/create_resource.html
@@ -12,7 +12,7 @@
                 {% csrf_token %}
                 {{ form }}
                 <!--<input type="submit" value="Submit"> -->
-                <button type="submit" class="w-full my-4 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Add new resource</button>
+                <button type="submit" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Add new resource</button>
 
             </form>
         
