--- a/src/card_interactions/templates/liked.html
+++ b/src/card_interactions/templates/liked.html
@@ -1,1 +1,4 @@
-<button hx-indicator="#spinner" hx-get="/card/{{ id }}/like" hx-swap="outerHTML" class="px-3 py-2 my-2  text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">Unfollow card</button>
+{% load static%}
+<button hx-indicator="#spinner" hx-get="/card/{{ id }}/like" hx-target="#like" hx-swap="outerHTML" class="text-gray-900 mx-4 px-4 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+    <img src="{% static '/icons/heart-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+</button>
