--- a/src/card_interactions/templates/new_title.html
+++ b/src/card_interactions/templates/new_title.html
@@ -1,3 +1,4 @@
+{% load static %}
 <style> 
     h1.pointer {
             cursor: pointer;
@@ -10,50 +11,51 @@
 <div>
 {% endif %}
     {% if type == 'ambition' %}
-    <div style="background: #000000; cursor: pointer; color: #fff" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
+    <div style="background: #000000; cursor: pointer; color: #fff" class="w-full my-4  p-6 max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
-        <i class="fa-solid fa-2xl fa-eye"></i><br>
+        <img style="filter: invert(100%)  brightness(119%) contrast(119%); height: 100px; width: 100px;" src="{% static '/icons/flag-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-white ">{{type}}</h5>
         <h1  class="mb-2 text-4xl font-bold tracking-tight text-white ">{{ title }}</h1>
     </div>
     </div>
 {% elif type == 'challenge' %}
-        <div style="background: #E6799D; cursor: pointer;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #E6799D; cursor: pointer;"  class="w-full max-w my-4  p-6 bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-2xl fa-mountain"></i><br>
+                <img src="{% static '/icons/mountain-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
-            </div>
-            </div>
+            </div>    
+        </div>
+        
 {% elif type == 'idea' %}
-        <div style="background: #51c1ff; cursor: pointer;"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #51c1ff; cursor: pointer;"  class="w-full max-w my-4   p-6 bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-2xl fa-eye"></i><br>
+                <img src="{% static '/icons/lightbulb-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
             </div>
             </div>
 {% elif type == 'pro' %}
-        <div style="background: #ffeb39; cursor: pointer;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #ffeb39; cursor: pointer;" class="w-full max-w my-4  bg-white p-6 border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-circle-up fa-2xl"></i><br>
+                <img src="{% static '/icons/thumbs-up-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 <h1 style=".grab {cursor: grab;}" class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
                 
             </div>
             </div>
 {% elif type == 'con' %}          
-        <div style="background: red; cursor: pointer;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #78E7BF; cursor: pointer;" class="w-full max-w my-4  bg-white p-6 border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-circle-down fa-2xl"></i><br>
+                <img src="{% static '/icons/thumbs-down-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
             </div>
             </div>
 {% elif type == 'empty' %}          
-        <div style="background:#78E7BF; cursor: pointer;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
+        <div style="background:#78E7BF; cursor: pointer;" class="w-full my-4 max-w p-6 bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-edit fa-2xl"></i><br>
+                <img src="{% static '/icons/plus-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Start editing</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">New card</h1>
             </div>
@@ -62,7 +64,7 @@
 
 {% if user.is_authenticated %}
 </div>
-    <button hx-indicator="#spinner" hx-get="/card/{{ id }}/edit/title" class="px-3 ml-4 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit title</button>
+    <button hx-indicator="#spinner" hx-get="/card/{{ id }}/edit/title" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">edit title</button>
 </div>
 {% endif %}
 
