--- a/src/card_interactions/templates/resources.html
+++ b/src/card_interactions/templates/resources.html
@@ -38,10 +38,10 @@
                 </div>
             </li>
                 {% empty %}
-                <p class="ml-auto text-xs text-gray-500 ">No resources, add one!</p>
+                <p class="ml-auto text-xs p-4 m-4 text-gray-500 ">No resources yet, add one!</p>
         {% endfor %}        
     </ul>
     {% if user.is_authenticated %}
-    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#modal" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300  dark:hover:bg-blue-700 dark:focus:ring-blue-800">add  resource</button>
+    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#modal" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">add  resource</button>
     {% endif %}
 </div>
