--- a/src/card_interactions/templates/typecomment.html
+++ b/src/card_interactions/templates/typecomment.html
@@ -1,8 +1,8 @@
 {% include 'comment.html' with comments=comments id=id %}
 {% if user.is_authenticated %}
-<form class="p-4">
-    <div class="p-4 w-full mb-4 border border-gray-200 rounded-lg bg-gray-50  ">
-        <div class="px-4 py-2 bg-white rounded-t-lg ">
+<form>
+    <div class="w-full m-4 border border-gray-200 rounded-lg bg-gray-50  ">
+        <div class="p-2 bg-white rounded-t-lg ">
             {% csrf_token %}
             {{ form }}       
          </div>
@@ -20,6 +20,7 @@
  {% else%}
  <div class="p-4 w-full mb-40 border border-gray-200 rounded-lg bg-gray-50  ">
  </div>
-
  {% endif %}
+ <div style="height: 140px;"></div>				
+
  
