--- a/src/dashboard/templates/dashboard_index.html
+++ b/src/dashboard/templates/dashboard_index.html
@@ -19,5 +19,5 @@
   setTimeout(function(){ ScreenshotReady() }, 2000);
 </script>
 
-{% include 'legend1.html' %}
+{% include 'legend.html' %}
 {% endblock %}
